# ADMeth

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: config.yaml
notebooks/: Bpreprocdatasets.ipynb  Cmodeltraining.ipynb  Dmodelevaluate.ipynb  Erecscores.ipynb  Fmlmodels.ipynb  Gplotsanalysis.ipynb  Hstatisticalanalysis.ipynb  Ifunctionalanalysis.ipynb
scripts/backup/: Dmodelevaluate.ipynb  ErecscoresAll.ipynb  Gplotsanalysis.ipynb  utils.ipynb
scripts/functional_v2/: step1_significant_cpgs_byFDR.csv  step2_KEGG_pancreatic_cancer_overlap_genes.txt  step2_KEGG_pancreatic_cancer_row.csv  step2_ORA_KEGG_topCpgs_geneUniverse.csv  step3_KEGG_pancreatic_cancer_row_empirical.csv  step3_perm_ORA_KEGG_cpglevel.csv  step4_ORA_GO_BP.csv  step4_ORA_Hallmark.csv  step4_ORA_Reactome.csv  step4_gene_coannotation_edges.csv  step4_gene_coannotation_nodes.csv
src/: cli.py  steps_evaluate.py  steps_functional.py  steps_init.py  steps_mlmodels.py  steps_plots.py  steps_preprocess.py  steps_recscores-Copy1.py  steps_recscores.py  steps_stats.py  steps_summary.py  utils_banner.py
working_scripts/: 01_preprocess.py  02_modeltraining.py  03_modelevaluate.py  04_recscores.py  05_mlmodels.py  06_plotsanalysis.py  07_statisticalanalysis.py  08_functionalanalysis.py
